NTP: Fix broken flexbox in the footer.
BUG=226439
TEST=Open a new tab page, and verify that the "Other Devices" and
"Recently Closed" menus are visible and not overlapping.

Review URL: https://codereview.chromium.org/13646002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@192375 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: d00048f6b94b83e61fcb6dea16ce73e148cdd6d8

--- a/chrome/browser/resources/ntp4/new_tab.css
+++ b/chrome/browser/resources/ntp4/new_tab.css
@@ -446,6 +446,9 @@ html[dir='rtl'] #chrome-web-store-title {
   display: -webkit-flex;
   height: 100%;
   margin: 0;
+  /* TODO(dubroy): Remove this if possible. According to the flexbox spec,
+     min-content is the default min-width for flex items. */
+  min-width: -webkit-min-content;
 }
 
 #recently-closed-menu-button {
